alignement correct de certains éléments

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,8 +7,6 @@
 .row > [class^="col-"] {
   padding-top: 12px;
   padding-bottom: 12px;
-  background-color: rgb(238, 226, 233);
-  border: 1px solid rgb(205, 166, 166);
 }
 
 * {
@@ -65,9 +63,6 @@ p {
   font-family: outfit;
   padding: 20px;
   font-size: 20px;
-}
-.langues:hover {
-  font-size: 35px;
 }
 
 .gras {
@@ -135,6 +130,9 @@ h4 {
   font-size: 20px;
   font-weight: 400;
   justify-content: center;
+  margin: 0 auto;
+  margin-top: 66px;
+
   padding: 15px 30px;
   width: 356px;
   justify-content: center;
@@ -145,6 +143,7 @@ h4 {
 
 .Accueil-button:hover {
   background: white;
+  font-weight: 400;
 }
 
 /* EGO */
@@ -169,7 +168,7 @@ h4 {
   color: #fff;
   font-family: Outfit;
   font-size: 24px;
-  font-weight: 400;
+  font-weight: 300;
   text-align: center;
 
   width: 263px;
@@ -184,6 +183,7 @@ h4 {
 }
 
 .Ego-button:hover {
+  font-weight: 400;
   border: 1px rgba(255, 255, 255, 0.516);
   color: #6f4e4e;
   background: rgba(255, 255, 255, 0.516);
@@ -288,6 +288,7 @@ h4 {
   width: 261px;
   align-items: center;
   height: 72.168px;
+  margin-top: 44px;
 }
 .inscription {
   border-radius: 17px;
@@ -319,18 +320,12 @@ h4 {
   justify-content: end;
 }
 
-.infos {
+.infos-p1 {
   color: #fff;
-  text-align: right;
   font-family: Outfit;
   font-size: 15px;
   font-weight: 400;
-}
-
-.infos {
-  flex-direction: row;
-  text-align: center;
-  align-items: center;
+  margin: 0 auto;
 }
 
 /* ---------- VIN ROUGE 🍷 ---------- */
@@ -381,10 +376,10 @@ h6 {
 
 .INFOS {
   display: flex;
-  color: #000;
   font-family: outfit;
-  font-size: 20px;
+  font-size: 5px;
   text-align: center;
+  color: #fff;
 
   margin-top: 92px;
   align-items: center;
@@ -392,6 +387,14 @@ h6 {
   flex-direction: row;
   transition-duration: 0.3s;
 }
+
+.red-typo {
+  color: #fff;
+  text-align: center;
+  font-family: Outfit;
+  font-size: 35px;
+}
+
 .red-suggestion:hover {
   color: #000;
   text-align: center;
@@ -399,6 +402,8 @@ h6 {
   font-size: 25px;
   font-weight: 400;
 
+  transition-duration: 0.2s;
+  margin: 0 auto;
   width: 261px;
   height: 352px;
   align-items: center;
@@ -413,7 +418,11 @@ h6 {
   font-family: Outfit;
   font-size: 25px;
   font-weight: 400;
-
+  .red-typo {
+    color: #000;
+  }
+  transition-duration: 0.2s;
+  margin: 0 auto;
   width: 261px;
   height: 352px;
   align-items: center;
@@ -429,6 +438,8 @@ h6 {
   font-size: 25px;
   font-weight: 400;
 
+  transition-duration: 0.2s;
+  margin: 0 auto;
   width: 261px;
   height: 352px;
   align-items: center;
@@ -436,28 +447,28 @@ h6 {
   border-radius: 20px;
   background: #d4caca;
 }
+
 .Commander-Rouge {
   display: flex;
-  margin-top: 102px;
-  margin-bottom: 102px;
   justify-content: center;
   align-items: center;
-
   color: #000;
   font-family: outfit;
   font-size: 25px;
-}
 
-.Commander-Rouge {
   width: 357px;
   height: 93px;
   border-radius: 20px;
+  margin: 0 auto;
+  margin-bottom: 102px;
   background-color: #d4caca;
 }
 .Commander-Rouge:hover {
   width: 357px;
   height: 93px;
+  margin: 0 auto;
   border-radius: 20px;
+  margin-bottom: 102px;
   border: 3px solid #000;
   background: #fff;
 }
@@ -493,7 +504,19 @@ h6 {
 }
 
 /* SUGGESTIONS */
+.INFOS-blanc {
+  display: flex;
+  font-family: outfit;
+  font-size: 5px;
+  text-align: center;
+  color: #fff;
 
+  margin-top: 92px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  transition-duration: 0.3s;
+}
 .suggestion {
   color: white;
   text-align: center;
@@ -506,6 +529,8 @@ h6 {
   font-size: 25px;
   font-weight: 400;
   justify-content: center;
+  margin: 0 auto;
+  transition-duration: 0.2s;
 
   width: 261px;
   height: 352px;
@@ -519,7 +544,6 @@ h6 {
   color: #fff;
   text-align: center;
   font-size: 20px;
-  transition-duration: 0.3s;
 }
 
 .température:hover {
@@ -528,6 +552,8 @@ h6 {
   font-family: Outfit;
   font-size: 25px;
   font-weight: 400;
+  margin: 0 auto;
+  transition-duration: 0.2s;
 
   width: 261px;
   height: 352px;
@@ -537,19 +563,18 @@ h6 {
   background: #e5e0d4;
 }
 
+/* GARDE */
+
 .typo {
-  color: #000;
+  color: #fff;
   text-align: center;
   font-family: Outfit;
   font-size: 35px;
 }
 
-/* GARDE */
-
 .garde {
   color: #fff;
   text-align: center;
-  transition-duration: 0.3s;
 }
 
 .garde:hover {
@@ -558,7 +583,11 @@ h6 {
   font-family: Outfit;
   font-size: 25px;
   font-weight: 400;
-
+  margin: 0 auto;
+  transition-duration: 0.2s;
+  .typo {
+    color: #000;
+  }
   width: 261px;
   height: 352px;
   border-radius: 20px;
@@ -567,11 +596,10 @@ h6 {
 
 .Commander-Blanc {
   display: flex;
-  margin-top: 102px;
-  margin-bottom: 102px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
 
   color: #000;
   text-align: center;
@@ -585,6 +613,7 @@ h6 {
   height: 93px;
   border-radius: 20px;
   background-color: #e5e0d4;
+  margin-bottom: 102px;
 }
 .Commander-Blanc:hover {
   width: 357px;
@@ -592,6 +621,7 @@ h6 {
   border-radius: 20px;
   border: 3px solid #000;
   background: #fff;
+  margin-bottom: 102px;
 }
 
 .RESERVATION {
@@ -603,6 +633,8 @@ h6 {
 /* FOOTER */
 
 .Background-Footer-Blanc {
+  margin-top: 60px;
+  font-weight: 400;
   color: #000;
   background-color: #e5e0d4;
 }
@@ -617,7 +649,7 @@ h6 {
   color: #000;
   font-family: Outfit;
   font-size: 20px;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 .Newsletter {
@@ -634,7 +666,6 @@ h6 {
   height: 72.168px;
   flex-direction: column;
   justify-content: center;
-  display: flex;
 }
 
 .email-blanc {
@@ -654,12 +685,11 @@ h6 {
 
 .inscription-blanc {
   color: #000;
-  margin-top: 400px;
   font-family: Outfit;
   font-size: 25px;
   font-weight: 400;
 }
-.inscription {
+.inscription-button-blanc {
   color: #f000;
   font-family: Outfit;
   font-size: 25px;
@@ -667,19 +697,20 @@ h6 {
   height: 72.168px;
   flex-direction: column;
   justify-content: center;
+  margin-top: 10px;
 
   display: flex;
   width: 261px;
   align-items: center;
   height: 72.168px;
 }
-.inscription {
+.inscription-button-blanc {
   border-radius: 17px;
   color: #000;
   background: #fff;
   transition-duration: 0.2s;
 }
-.inscription:hover {
+.inscription-button-blanc:hover {
   color: #fff;
   background: #000;
 }
@@ -703,16 +734,16 @@ h6 {
   font-family: Outfit;
   font-size: 25px;
   font-weight: 400;
+  gap: 30px;
 }
 
 .Bio-Suisse {
   display: flex;
   justify-content: end;
 }
-
 .infos {
   color: #fff;
-  text-align: right;
+  text-align: center;
   font-family: Outfit;
   font-size: 15px;
   font-weight: 400;
@@ -721,7 +752,6 @@ h6 {
 .infos-blanc {
   color: #000;
   text-align: center;
-  text-align: right;
   font-family: Outfit;
   font-size: 15px;
   font-weight: 400;
